fix grid alignment

--- a/css/main.css
+++ b/css/main.css
@@ -418,7 +418,7 @@ footer .social {
 @media screen and (min-width: 1000px) {
   .home--one {
     grid-template-areas: 'B A' 'C D';
-    grid-template-columns: auto auto;
+    grid-template-columns: 50vw auto;
     grid-template-rows: auto auto;
   }
 }
@@ -546,7 +546,8 @@ footer .social {
 
 @media screen and (min-width: 1000px) {
   .home--two {
-    display: flex;
+    display: grid;
+    grid-template-columns: 50vw auto;
   }
 }
 
