--- a/scss/layouts/_section-one.scss
+++ b/scss/layouts/_section-one.scss
@@ -6,7 +6,7 @@
 
         @include media-lg {
             grid-template-areas: 'B A' 'C D';
-            grid-template-columns: auto auto;
+            grid-template-columns: 50vw auto;
             grid-template-rows: auto auto;
         }
 
